fixed issue #60 - squeeze spacing for small-phone (320px)

--- a/src/client/components/SearchBox/SearchFilters/SearchFilters.component.scss
+++ b/src/client/components/SearchBox/SearchFilters/SearchFilters.component.scss
@@ -5,6 +5,10 @@
   padding: 20px 20px 20px 0;
   margin: 0;
 
+  @include max-screen($small-phone){
+    padding: 3px 0 0 0;
+  }
+
   .search-filters--button {
     display:inline-block;
     padding: 5px 20px;
