--- a/src/client/scss/settings/breakpoints.scss
+++ b/src/client/scss/settings/breakpoints.scss
@@ -1,3 +1,4 @@
+$small-phone: 320px;
 $phone: 400px;
 $tablet: 600px;
 $desktop: 800px;
